Fix border issues on mobile

--- a/new-site/assets/sass/components/_project-card.scss
+++ b/new-site/assets/sass/components/_project-card.scss
@@ -28,6 +28,9 @@
         border-top: 4px solid;
         display: grid;
         grid-template-columns: 1fr auto 1fr;
+        @media (max-width: 599px) {
+            border-top: 4px solid;
+        }
         .left {
             padding: 1.5em 2em 2em 2.5em;
             @media (max-width: 599px) {
